--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
     "angular-ui-router": "~0.2.10",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "font-awesome": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
