--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "soundcloudapp",
-  "version": "0.0.0",
+  "name": "SoundCloudApp",
+  "description": "Sound Cloud Desktop Application",
+  "version": "0.0.1",
   "dependencies": {},
-  "main": "http://localhost:9000/",
+  "main": "http://127.0.0.1:9000",
+  "node-remote":"*",
   "window": {
     "title": "SoundCloud",
     "icon": "link.png",
@@ -32,6 +34,7 @@
     "grunt-karma": "^0.8.3",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
+    "grunt-node-webkit-builder": "^0.1.21",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
